force-app/main/default/objects/ContractItem__c/ContractItem__c.object-meta.xml
<CustomObject>
    <label>계약서 상세</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Contract Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>