force-app/main/default/objects/ContractItem__c/fields/FmDiscount__c.field-meta.xml
<CustomField>
    <fullName>FmDiscount__c</fullName>
    <formula>(ListPrice__c - SalesPrice__c) / ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>