force-app/main/default/objects/ContractItem__c/fields/FmListAmout__c.field-meta.xml
<CustomField>
    <fullName>FmListAmout__c</fullName>
    <formula>Quantity__c * ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListAmout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>