force-app/main/default/objects/ContractItem__c/fields/FmSaleAmount__c.field-meta.xml
<CustomField>
    <fullName>FmSaleAmount__c</fullName>
    <formula>Quantity__c * SalesPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SaleAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>