force-app/main/default/objects/ContractItem__c/fields/GfContract__c.field-meta.xml
<CustomField>
    <fullName>GfContract__c</fullName>
    <label>Gf Contract</label>
    <referenceTo>GfContract__c</referenceTo>
    <relationshipName>Contract_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>