force-app/main/default/objects/ContractItem__c/fields/WarrantyTerm__c.field-meta.xml
<CustomField>
    <fullName>WarrantyTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Term</label>
    <referenceTo>WarrantyTerm__c</referenceTo>
    <relationshipName>Contract_Item</relationshipName>
    <type>Lookup</type>
</CustomField>